# ZTController

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  models.py  schemas.py
app/routers/: admin.py  employee_plans.py  health.py  run_tasks.py
app/services/: daily_plan.py  seed_loader.py  task_loader.py  task_status.py
app/utils/: random_seed.py  time.py
config/: employees.yaml  employees.yaml.example  locations.yaml  locations.yaml.example  tasks.yaml  tasks.yaml.example
deploy/: zt-db-backup.service  zt-db-backup.timer
docs/: api.md  commands.md  openapi.json  openapi.yaml  plan_2026-04-28.html
scripts/: backup-db-to-s3.sh  bootstrap-controller.sh  export_openapi.py  generate_daily_plan.py  init_db.py  preview_daily_plan.py  run_dev.sh  seed_data.py
tests/: conftest.py  test_cafe_dispatch.py  test_daily_plan.py  test_employee_plan_api.py  test_integration_dry_run.py  test_task_status.py
